Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77096

Generators do not work when used inside a QML component

    XMLWordPrintable

Details

    • c0e0c755a1c927299607f0af83fadb4a0af6ce20 (qt/qtdeclarative/dev)

    Description

      Generators do not work when used inside a QML component, these are a part of ECMAScript 6 so they should be available. Whereas adding something like:

      function* gen() { 
      yield 2 
      yield 3 
      yield 5 
      } 
      

      to the QML will give the error:

      Expected a qualified name id
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes