Support top level generator functions

Extends grammar to support generator functions in QML components and
adjusts codegen accordingly

The corresponding test case must be blacklisted in tst_qmlmin, as qmlmin
cannot handle yield statements

Fixes: QTBUG-77096
Change-Id: I47d45dd56289cdf073b41932a585259d3052de04
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>